clusters/main/kubernetes/system/networkpolicies/app/nextcloud-allow-ingress-cilium-gateway.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-cilium-gateway
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/name: nextcloud
      pod.name: nginx
  ingress:
    - fromEntities:
        - ingress
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
